[package]
name = "nclogin"
version = "0.4.2"
edition = "2021"

[dependencies]
ncurses = "5.101.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ncursesw = "0.6.4"
gettext-rs = "0.7"
libc = "0.2.163"
chrono = "0.4.38"
nix = { version = "0.29", features = ["ioctl", "user"] }
sysinfo = "0.29.1"
pam-sys = "0.5.6"
regex = "1.11.1"

[[bin]]
name = "user"
path = "src/user.rs"

[[bin]]
name = "session"
path = "src/session.rs"

[[bin]]
name = "settings"
path = "src/settings.rs"

[[bin]]
name = "issue_helpers"
path = "src/issue_helpers.rs"

[[bin]]
name = "auth_user"
path = "src/auth_user.rs"

[[bin]]
name = "num_lock"
path = "src/num_lock.rs"

[[bin]]
name = "nclogin"
path = "src/main.rs"
